# tlv-for-everyone

./: LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
TlvParser/: TlvParser.py  __init__.py
test/: TlvParser_test.py
