[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlv-for-everyone"
version = "0.1.0"
description = "Python BER-TLV parser/encoder for EMV & smartcard data"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"  # <-- SPDX string to silence the deprecation warning
authors = [{ name = "Vitalij Gotovskij", email = "vitalij@cdeveloper.eu" }]
keywords = ["TLV", "BER", "EMV", "smartcard", "parser", "APDU"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/yourname/tlv-for-everyone"
Issues = "https://github.com/yourname/tlv-for-everyone/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["TlvParser*"]   # keep your current package folder name
